Fixed flex-wrap

--- a/web_cooking/static/styles/style_index.css
+++ b/web_cooking/static/styles/style_index.css
@@ -529,6 +529,7 @@ input[type="text"] {
 .recipes_hidden{
 	letter-spacing: 1px;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
 }
 
